--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -26,31 +26,31 @@ h1 {
 }
 
 h2 {
-  color:#393939;
+  color:#292933;
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+  color:#292933;
 }
 
 a {
-  color:#39c;
+  color:#525266;
   text-decoration:none;
 }
 
 a:hover {
-  color:#069;
+  color:#3d3d4d;
 }
 
 a small {
   font-size:11px;
-  color:#777;
+  color:#525266;
   margin-top:-0.3em;
   display:block;
 }
 
 a:hover small {
-  color:#777;
+  color:#3d3d4d;
 }
 
 .wrapper {
