--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,65 @@
+@font-face {
+  font-family: 'Noto Sans';
+  font-weight: 400;
+  font-style: normal;
+  src: url('../fonts/Noto-Sans-regular/Noto-Sans-regular.eot');
+  src: url('../fonts/Noto-Sans-regular/Noto-Sans-regular.eot?#iefix') format('embedded-opentype'),
+       local('Noto Sans'),
+       local('Noto-Sans-regular'),
+       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.woff2') format('woff2'),
+       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.woff') format('woff'),
+       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.ttf') format('truetype'),
+       url('../fonts/Noto-Sans-regular/Noto-Sans-regular.svg#NotoSans') format('svg');
+}
 
+@font-face {
+  font-family: 'Noto Sans';
+  font-weight: 700;
+  font-style: normal;
+  src: url('../fonts/Noto-Sans-700/Noto-Sans-700.eot');
+  src: url('../fonts/Noto-Sans-700/Noto-Sans-700.eot?#iefix') format('embedded-opentype'),
+       local('Noto Sans Bold'),
+       local('Noto-Sans-700'),
+       url('../fonts/Noto-Sans-700/Noto-Sans-700.woff2') format('woff2'),
+       url('../fonts/Noto-Sans-700/Noto-Sans-700.woff') format('woff'),
+       url('../fonts/Noto-Sans-700/Noto-Sans-700.ttf') format('truetype'),
+       url('../fonts/Noto-Sans-700/Noto-Sans-700.svg#NotoSans') format('svg');
+}
+
+@font-face {
+  font-family: 'Noto Sans';
+  font-weight: 400;
+  font-style: italic;
+  src: url('../fonts/Noto-Sans-italic/Noto-Sans-italic.eot');
+  src: url('../fonts/Noto-Sans-italic/Noto-Sans-italic.eot?#iefix') format('embedded-opentype'),
+       local('Noto Sans Italic'),
+       local('Noto-Sans-italic'),
+       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.woff2') format('woff2'),
+       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.woff') format('woff'),
+       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.ttf') format('truetype'),
+       url('../fonts/Noto-Sans-italic/Noto-Sans-italic.svg#NotoSans') format('svg');
+}
+
+@font-face {
+  font-family: 'Noto Sans';
+  font-weight: 700;
+  font-style: italic;
+  src: url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot');
+  src: url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot?#iefix') format('embedded-opentype'),
+       local('Noto Sans Bold Italic'),
+       local('Noto-Sans-700italic'),
+       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2') format('woff2'),
+       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff') format('woff'),
+       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf') format('truetype'),
+       url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans') format('svg');
+}
 
 body {
   background-color: #fff;
   padding:50px;
-  font: 14px/1.5 "Roboto Mono", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
-  font-weight:300;
+  font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -26,31 +80,31 @@ h1 {
 }
 
 h2 {
-  color:#292933;
+  color:#393939;
 }
 
 h3, h4, h5, h6 {
-  color:#292933;
+  color:#494949;
 }
 
 a {
-  color:#525266;
+  color:#39c;
   text-decoration:none;
 }
 
 a:hover {
-  color:#3d3d4d;
+  color:#069;
 }
 
 a small {
   font-size:11px;
-  color:#525266;
+  color:#777;
   margin-top:-0.3em;
   display:block;
 }
 
 a:hover small {
-  color:#3d3d4d;
+  color:#777;
 }
 
 .wrapper {
@@ -92,7 +146,7 @@ th, td {
 
 dt {
   color:#444;
-  font-weight:400;
+  font-weight:700;
 }
 
 th {
@@ -155,7 +209,7 @@ header ul a:active {
 
 strong {
   color:#222;
-  font-weight:400;
+  font-weight:700;
 }
 
 header ul li + li + li {
